need to break the collapsibles into partials and also need to fix the panels

--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -17,3 +17,27 @@
   	font-size: 14px;
   }
 }
+
+.modal-dialog.response-data{
+  max-width: 500px;
+
+  .panel-heading{
+    text-align: left;
+    padding: 5px;
+  }
+
+  .panel-group .panel{
+    border-bottom: none;
+    box-shadow: none;
+  }
+
+  .panel-body{
+    text-align: left;
+  }
+
+  .panel-title{
+    text-align: left;
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+}
